fix too small popup window in chrome

--- a/popup/incident-list.css
+++ b/popup/incident-list.css
@@ -1,5 +1,5 @@
 .popup-window{
-  min-height: 100px;
+  min-height: 400px;
   min-width: 360px;
   display: inline-block;
 }
